--- a/MICHAELDONTLEAVEMEHEREMICHAELHELPME/index.html
+++ b/MICHAELDONTLEAVEMEHEREMICHAELHELPME/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="CARD">
+        <img src="https://loremflickr.com/640/360" alt="cat">
+        <a href="#" class="btnCard">Купить</a>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum, quidem libero veniam maiores ducimus temporibus.</p>
         <p>Et eveniet itaque eligendi atque fuga maiores sunt porro est. Sequi facere quae mollitia laboriosam.</p>
     </div>
